# csv-reporter

./: .gitignore  Makefile  README.md  pyproject.toml
src/: __init__.py
src/csv_reporter/: __init__.py  aggregator.py  cli.py  csv_reader.py  errors.py  logging_utils.py  model.py  normalizer.py  presenter.py
src/csv_reporter/reports/: average_rating.py  base.py  registry.py
tests/: test_aggregation.py  test_cli_args.py  test_output_format.py  test_registry_and_reports.py
